2001-12-26  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [#496610] #include <sys/wait.h>
	   by Kazuhiro NISHIYAMA (znz)
	* main.c: #if defined(HAVE_WAITPID) || defined(HAVE_WAIT3)
	* etc.c: ditto
	* file.c: ditto

2001-12-26  Kazuhiro NISHIYAMA <zn@mbf.nifty.com>

	* [w3m-dev 02725] bcopy, bzero
	* etc.c (bcopy): deleted
	* etc.c (bzero): deleted
	* indep.c (bcopy): added
	* indep.c (bzero): added
	* indep.c (bcopy): src should be const
	* fm.h (bcopy): ditto

2001-12-25  Kazuhiko <kazuhiko@archi.kyoto-u.ac.jp>
	
	* [w3m-dev 02727]
	* doc-jp/keymap.default (C-r): ISEARCH_BACK
	* doc-jp/keymap.default (C-s): ISEARCH
	* doc-jp/README.func: fix typo

2001-12-25  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 02726] incremental search
	* NEWS: incremental search
	* fm.h (inputLineHist) define by inputLineHistSearch
	* fm.h (COPY_BUFPOTISION): added
	* fm.h (SAVE_BUFPOSITION): ditto
	* fm.h (RESTORE_BUFPOSITION): ditto
	* funcname.tab (ISEARCH): added
	* funcname.tab (ISEARCH_BACK): added
	* keybind.c (GlobalKeymap): C-s = ISEARCH, C-r = ISEARCH_BACK
	* linein.c (inputLineHistSearch): renamed from inputLineHist,
			new arg incrfunc() for increment search
	* linein.c (inputLineHistSearch): add cursorX, cursorY
	* main.c (srchcore): remove displayBuffer, onA
	* main.c (dispincsrch): added
	* main.c (isrch): ditto
	* main.c (isrchfor): ditto
	* main.c (isrchbak): ditto
	* main.c (srch): add displayBuffer, onA
	* main.c (srch_nxtprv): ditto
	* proto.h (isrchfor): added
	* proto.h (isrchbak): ditto
	* proto.h (inputLineHistSearch): renamed
	* doc/keymap.default (C-r): ISEARCH_BACK
	* doc/keymap.default (C-s): ISEARCH
	* doc/README.func (ISEARCH): added
	* doc/README.func (ISEARCH_BACK): ditto
	* doc-jp/README.func (ISEARCH): added
	* doc-jp/README.func (ISEARCH_BACK): ditto

2001-12-25  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 02723] cleanup resizing
	* main.c (resized): renamed to need_resize_screen
	* main.c (need_resize_screen): added